--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/init.js"></script>
+    <script type="text/javascript" src="js/api.js"></script>
     
     <script type="text/javascript" src="js/tmdb.js"></script>
     
