--- a/movie8/index.html
+++ b/movie8/index.html
@@ -6,8 +6,12 @@
         rel="stylesheet">
         <link rel="stylesheet" href="css/materialize.min.css" media="screen,projection">
         <link rel="stylesheet" href="css/style.css" media="screen,projection">
+        
+        <link rel="manifest" href="/manifest.json">
+        <meta name="theme-color" content="#00897B"/>
+        
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
- <title>PWEB Movie</title>
+        <title>PWEB Movie</title>
  </head>
 
  <body>
